--- a/DockerfilePrep
+++ b/DockerfilePrep
@@ -1,20 +1,21 @@
 FROM umihico/aws-lambda-selenium-python:latest
 
-# Set working directory to Lambda task root
-WORKDIR /var/task
-
 # Copy the Prep Lambda handler
-COPY workspace_prep.py .
+COPY workspace_prep.py ${LAMBDA_TASK_ROOT}/
 
 # Ensure correct permissions
-RUN chmod 644 workspace_prep.py
+RUN chmod 644 ${LAMBDA_TASK_ROOT}/workspace_prep.py
 
 # Install required Python dependencies
+# Note: The base image already has selenium installed
 RUN pip install --no-cache-dir \
-    boto3 \
-    selenium
+    boto3
 
-# Set the Lambda handler entrypoint
+# Debugging: Check file existence and permissions
+RUN echo "=== Checking Lambda Task Root ===" && \
+    ls -la ${LAMBDA_TASK_ROOT}/ && \
+    echo "=== End Check ==="
+
 # Set environment variables to disable SeleniumManager at container level
 ENV SE_SELENIUM_MANAGER=false
 ENV SELENIUM_MANAGER=false
